@@ -13,6 +13,9 @@ This is a list of some things to do:
 
 23) TiLP used as a normal user
 
+24) user boxes should be showed at center
+26) ROM dumping should display a box when ready
+
 
 //------
 
