@@ -18,11 +18,15 @@ gchar *s = N_("Receive");
 gchar *s = N_("Receive variables from non-silent calculators.");
 gchar *s = N_("Send");
 gchar *s = N_("Calculator files");
-gchar *s = N_("0 bytes free/used");
-gchar *s = N_("0 bytes free/used");
+gchar *s = N_("0 bytes free");
+gchar *s = N_("0 bytes free");
+gchar *s = N_("0 bytes free");
+gchar *s = N_("0 bytes free");
+gchar *s = N_("RAM: ");
+gchar *s = N_("FLASH: ");
 gchar *s = N_("Memory:");
 gchar *s = N_("Create a new directory.");
-gchar *s = N_("MkDir");
+gchar *s = N_("Folder");
 gchar *s = N_("Delete selected files.");
 gchar *s = N_("Delete");
 gchar *s = N_("Refresh right frame.");
